added answers to questions for 1,2,3 lab

--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -65,6 +65,34 @@
    "source": [
     "Посилання на GitHub-репозиторій [тут](https://github.com/OustamT/pythonProject)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "719b4e47",
+   "metadata": {},
+   "source": [
+    "### Контрольні запитання\n",
+    "\n",
+    "1. У чому відмінність інтерпретатора від компілятора? Python - компілятор чи інтерпретатор?\n",
+    "- Компілятор перетворює вихідний код програми у машинний код (наприклад, файл .exe), транслюється один раз (дію необхідно повторювати щоразу, коли змінюється вихідний код)\n",
+    "- Інтерпретація - користувач коду може перекладати вихідну програму щоразу, коли вона має бути запущена \n",
+    "- Python - інтерпретатор\n",
+    "\n",
+    "2. Що таке IDE PyCharm?\n",
+    "-  Інтегрована середа розробки (IDE) для мови програмування Python, (іншими словами це зручний інтерфейс для роботи з Python, який маэ велику кількістю різноманітних додаткових функцій)\n",
+    "\n",
+    "3. Що таке система контроля версій (СКВ) і для чого вона призначена? У чому принципова відмінність СКВ svn та git?\n",
+    "- СКВ - це програма або інструмент, призначений для зберігання, контролю та відстеження історії файлів/проектів у директоріях. Існують два основних типи: централізована та розподілена.\n",
+    "- Git (розподілена система) працює незалежно від центрального сервера. З іншого боку, SVN використовує централізовану архітектуру.\n",
+    "4. Що відбувається при виконанні команди `git add .`?\n",
+    "- Вибирає всі файли, необхідні для подальшого коментаря\n",
+    "\n",
+    "5. Що відбувається при виконанні команди `git commit`?\n",
+    "- Додає коментар\n",
+    "\n",
+    "6. Якою git-командою виконується розміщення локальної копії git-репозиторію проєкта на віддаленому, що знаходиться на GitHub?\n",
+    "- git push"
+   ]
   }
  ],
  "metadata": {
