--- a/Lab2/Lab2.ipynb
+++ b/Lab2/Lab2.ipynb
@@ -225,6 +225,23 @@
    "source": [
     "print(0x777)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce95a10f",
+   "metadata": {},
+   "source": [
+    "### Контрольні запитання\n",
+    "\n",
+    "1. Записати ієрархію операторів.\n",
+    "- 1 = високий, 4 = ничжий: <br> 1) +, - (унарний) <br> 2) **  <br> 3) *, /, % <br> 4) +, - (бінарний)\n",
+    "\n",
+    "2. Записти на Python обчислення виразу $3^{3^4}$\n",
+    "- print(3 ** (3 ** 4))\n",
+    "\n",
+    "3. Що робить escape-символ \\n при виводі на екран функцією `print()`?\n",
+    "- переносить на наступний рядок"
+   ]
   }
  ],
  "metadata": {
