--- a/Lab3/Lab3.ipynb
+++ b/Lab3/Lab3.ipynb
@@ -342,6 +342,22 @@
     "\n",
     "print(\"Result:\", final_hour, \":\", final_mins)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2777d70d",
+   "metadata": {},
+   "source": [
+    "### Контрольні запитання\n",
+    "\n",
+    "1. Який вивод наступного фрагмента?\n",
+    "![](image/task1.jpg)\n",
+    "- 55\n",
+    "\n",
+    "2. Який очікуваний результат наступного фрагмента?\n",
+    "![](image/task2.jpg)\n",
+    "- str"
+   ]
   }
  ],
  "metadata": {
